Knight and checkmate fixed